# devops-final-project

./: .gitignore  Dockerfile  README.md  pyproject.toml  pytest.ini  requirements.txt
.github/workflows/: pr-dev.yml  push-dev.yml  push-main.yml  push-staging.yml
data/: mushrooms.csv  mushrooms.csv.dvc
default/0/: meta.yaml
default/0/0ba3228edf9c47c28ac39e43ed769a68/: meta.yaml
default/0/132d7d9d91d1443385b69f255fce0209/: meta.yaml
default/0/14560d4d34f64550a43121ebd8cc9393/: meta.yaml
default/0/1c6b728932894b12970686ec658f7ec7/: meta.yaml
default/0/2f1f6dcfa7574c33b30c2196a5de07e7/: meta.yaml
default/0/2f566d4fdc7147f1829a74dec1124875/: meta.yaml
default/0/3116e4a841ae497aba6abb215be7f5b5/: meta.yaml
default/0/3e80a05205b949b081b6956297a8bbf5/: meta.yaml
default/0/40ac76cc5a2c4a5f91c997f2fed1a527/: meta.yaml
default/0/54d110756d814309997ed591e07c93d7/: meta.yaml
default/0/5be7e18906c34fa6bd1ade67d3391c5e/: meta.yaml
default/0/65607af8678043bf988018762642c6d8/: meta.yaml
default/0/66665ef214d04d23be1b5ab79e70a281/: meta.yaml
default/0/6af0713afaf449dd91d1a81c32220ef4/: meta.yaml
default/0/6c8c5c2c0c5f49cb85a047e63269aeab/: meta.yaml
default/0/79f15f5367984d26a9c9f223797f0401/: meta.yaml
default/0/8408086e564f491187ee1e9c09ff58a5/: meta.yaml
default/0/87fdbf1cae024b6588586aaf63057259/: meta.yaml
src/mushroom_ml/: api.py  app.py  exploration.ipynb  train.py
tests/: conftest.py
tests/e2e/: test_api_live.py
tests/integration/: test_training_api_integration.py
tests/unit/: test_api.py  test_app_feature_sync.py  test_train.py
(+50 files in other folders)
